@@ -132,6 +132,9 @@ Release 2.7.2 - UNRELEASED
 
   BUG FIXES
 
+    HDFS-8863. The remaining space check in BlockPlacementPolicyDefault is
+    flawed. (Kihwal Lee via yliu)
+
 Release 2.7.1 - 2015-07-06
 
   INCOMPATIBLE CHANGES
